# demo-open-policy-agent

./: README.md  aqua.yaml  renovate.json
grpc-server-with-envoy/: .env  README.md  compose.yaml
grpc-server-with-envoy/envoy/: envoy.yaml
grpc-server-with-envoy/opa/: authz.rego  authz_test.rego
grpc-server-with-envoy/server/: Cargo.toml  build.rs
grpc-server-with-envoy/server/proto/: buf.yaml
grpc-server-with-envoy/server/proto/auth/v1/: auth_service.proto
grpc-server-with-envoy/server/proto/misc/v1/: misc_service.proto
grpc-server-with-envoy/server/src/: main.rs  proto.rs
server-with-envoy-and-keycloak/: compose.yaml
server-with-envoy-and-keycloak/envoy/: envoy.yaml
server-with-envoy-and-keycloak/server/: Cargo.toml
server-with-envoy-and-keycloak/server/src/: handler.rs  main.rs
simple-server-with-envoy/: .env  README.md
simple-server-with-envoy/opa/: authz.rego  authz_test.rego  config.yaml
simple-server-with-envoy/server/: Cargo.toml
simple-server-with-envoy/server/src/: handler.rs  main.rs
simple-server-with-envoy/tests/hurl/: README.md  create_err.hurl  create_ok.hurl  list_err.hurl  list_ok.hurl  something_err.hurl  something_ok.hurl
