[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8.3.0"
prost = "0.11.9"
prost-types = "0.11.9"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
tonic = "0.9.2"
tonic-health = "0.9.2"
tonic-reflection = "0.9.2"

[build-dependencies]
tonic-build = "0.9.2"
