[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
jsonwebtoken = "9.0.0"
serde = { version = "1.0.188", features = ["derive"] }
tokio = { version = "1.30.0", default-features = false, features = ["macros", "rt-multi-thread", "signal"] }
